--- a/package.json
+++ b/package.json
@@ -9,16 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@aws-sdk/client-dynamodb": "^3.284.0",
+    "@aws-sdk/util-dynamodb": "^3.284.0",
+    "@react-google-maps/api": "^2.18.1",
     "@types/node": "18.14.5",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
     "eslint-config-next": "13.2.3",
+    "express": "^4.18.2",
     "next": "13.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "socket.io": "^4.6.1",
+    "socket.io-client": "^4.6.1",
     "typescript": "4.9.5"
   },
   "devDependencies": {
+    "@types/google.maps": "^3.52.1",
     "@typescript-eslint/eslint-plugin": "^5.54.0",
     "@typescript-eslint/parser": "^5.54.0",
     "eslint": "^8.35.0",
